# eigerc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
fixtures/: fp.eig  index.eig  tailcall.eig  test.ei  test.eig
src/: Bytecode.hpp  CmdOpts.hpp  Compiler.cpp  Compiler.hpp  Context.cpp  Context.hpp  EiObject.hpp  Error.hpp  Instruction.hpp  Lexer.cpp  Lexer.hpp  Opcode.hpp  Parser.cpp  Parser.hpp  Scope.cpp  Scope.hpp  Util.cpp  Util.hpp  VM.cpp  VM.hpp  main.cpp
src/EiObjects/: ArrayObject.cpp  ArrayObject.hpp  BoolObject.hpp  BuiltinFunctions.hpp  DType.hpp  EiObject.cpp  EiObject.hpp  FunctionObject.cpp  FunctionObject.hpp  NumberObject.cpp  NumberObject.hpp  StringObject.cpp  StringObject.hpp
tests/: arithmetic.eig  arithmetic.eig.out  conditionals.eig  conditionals.eig.out  dtypes.eig  dtypes.eig.out  runner.cpp  varargs.eig  varargs.eig.out  variables.eig  variables.eig.out
